syntax = "proto3";

package good.middleware.app.powerrental.simulate.v1;

option go_package = "github.com/NpoolPlatform/message/good/middleware/v1/app/powerrental/simulate";

import "basetypes/v1/conds.proto";
import "good/middleware/v1/good/coin/coin.proto";

message SimulateReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional string AppGoodID = 30;
    optional string OrderUnits = 40;
    optional uint32 OrderDurationSeconds = 50;
}

message Simulate {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_id"
    string AppID = 30;
    // @inject_tag: sql:"good_id"
    string GoodID = 40;
    // @inject_tag: sql:"good_name"
    string GoodName = 50;
    // @inject_tag: sql:"app_good_id"
    string AppGoodID = 60;
    // @inject_tag: sql:"app_good_name"
    string AppGoodName = 70;
    // @inject_tag: sql:"order_units"
    string OrderUnits = 80;
    // @inject_tag: sql:"order_duration_seconds"
    uint32 OrderDurationSeconds = 90;

    repeated good.middleware.good1.coin.v1.GoodCoinInfo GoodCoins = 200;

    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32 UpdatedAt = 1010;
}

message Conds {
    optional basetypes.v1.Uint32Val ID = 10;
    optional basetypes.v1.StringVal EntID = 20;
    optional basetypes.v1.StringVal AppID = 30;
    optional basetypes.v1.StringVal AppGoodID = 40;
}

